# snp2k

./: .flake8  .gitignore  LICENSE  README.md  README.rst  setup.cfg  tox.ini
Mapping SNPs to Pathways/: Mapping SNPs to Pathways.ipynb  kegg_to_snp.tsv
notebooks/: Chromosome Summary.ipynb  chromosomes_paired.json  chromosomes_single.json
notebooks/Mapping SNPs to Pathways/: Mapping SNPs to Pathways.ipynb  reactome_to_snp.tsv  wikipathways_to_snp.tsv
src/snp2k/: __init__.py  __main__.py  chromosome_assignment.py  cli.py  constants.py  resources.py
src/snp2k/resources/: adeptus.bel.pickle  compath.bel.pickle  neurommsig.bel.pickle
