##########################
# Setup.py Configuration #
##########################
[metadata]
name = snp2k
version = 0.0.1-dev
description = Aggregate Bio2BEL repositories related to genetic variation
long_description = file: README.rst

url = https://gitlab.scai.fraunhofer.de/charles.hoyt/snp-knowledge

license = MIT
license_file = LICENSE

author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

[options]
install_requires =
    pandas
    click
    tqdm
    # PyBEL
    pybel
    pybel_jupyter
    # Bio2BEL
    bio2bel_hgnc
    bio2bel_entrez

python_requires = >=3.7
packages = find:
package_dir =
    = src
zip-safe = false

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    snp2k = snp2k.cli:main
